--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <body>
   <h1>Hello World!</h1>
   <title>H</title>
+  <!--linking style.css to index.hml-->
     <link rel="stylesheet" href="styles.css">
 </body>
