--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
   <h1>Hello World!</h1>
   <title>H</title>
   <!--linking style.css to index.hml-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </body>
