--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <body>
   <h1>Hello World!</h1>
-  <title>H</title>
+  <title>Hola</title>
   <!--linking style.css to index.hml-->
     <link rel="stylesheet" href="style.css">
 </body>
