--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
   <!--linking style.css to index.hml-->
     <link rel="stylesheet" href="style.css">
 </body>
-<button>sigma</button>
+<button>BOMBOCLATTT</button>
