--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<body>
-  <h1>Hello World!</h1>
+<head>
   <title>Hola</title>
   <!--linking style.css to index.hml-->
     <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Hello World!</h1>
+  <a href="https://desktable24.github.io/">cool website</a>
 </body>
-<button>BOMBOCLATTT</button>
+
