added cookie clicker

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>Hello World!</h1>
-  <a href="https://desktable24.github.io/">cool website</a>
+  <a href="https://orteil.dashnet.org/cookieclicker/">cool website</a>
 </body>
 
