--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello World!</h1>
-  <a href="https://orteil.dashnet.org/cookieclicker/">cool website</a>
+  <h2>My Fisrt Webpage</h2>
+  <a href="lolboygames.github.io">cool proxy</a>
+  <button>clcik to play tic-tac-toe</button>
 </body>
 
