HOLA TU COMO ESTAS

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
   <title>Hola</title>
   <!--linking style.css to index.hml-->
     <link rel="stylesheet" href="style.css">
+    <!--linking script.js-->
+    <script src="script.js"></script>
+
 </head>
 <body>
   <h2>My Fisrt Webpage</h2>
   <a href="lolboygames.github.io">cool proxy</a>
-  <button>clcik to play tic-tac-toe</button>
+  <button onclick="tick()">clcik to play tic-tac-toe</button>
 </body>
 
