--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<head>
+  <title>Hola</title>
+  <!--linking style.css to index.hml-->
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h2>My First Webpage</h2>
+  <a class="proxy" href="lolboygames.github.io">cool proxy</a>
+  <br/>
+  <button class="tictactoe">click to play tic-tac-toe</button>
+</body>
+<div class="toeboard">X</div>
