--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <h2>My First Webpage</h2>
   <a class="proxy" href="lolboygames.github.io">cool proxy</a>
   <br/>
-  <button class="tictactoe">click to play tic-tac-toe</button>
+  <button class="tictactoe" onclick="Tick()">click to play tic-tac-toe</button>
 </body>
 <div class="toeboard">X</div>
