--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h2>My First Webpage</h2>
-  <a class="proxy" href="lolboygames.github.io">cool proxy</a>
+  <a class="proxy" href="https://lolboygames.github.io/start.html">cool proxy</a>
   <br/>
   <button class="tictactoe" onclick="window.location.href="https://desktable24.github.io/tictactoe.html">click to play tic-tac-toe</button>
 </body>
