--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <h2>My First Webpage</h2>
   <a class="proxy" href="https://lolboygames.github.io/start.html">cool proxy</a>
   <br/>
-  <button class="tictactoe" onclick="window.location.href="https://desktable24.github.io/tictactoe.html">click to play tic-tac-toe</button>
+  <button class="tictactoe" onclick='window.location.href="https://desktable24.github.io/tictactoe.html"''>click to play tic-tac-toe</button>
 </body>
 
