--- a/tictactoe.html
+++ b/tictactoe.html
@@ -1,1 +1,13 @@
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
 
+<body>
+    <div class="toeboard">X</div> <div class="toeboard">X</div> <div class="toeboard">X</div>
+    <br/>
+    <div class="toeboard">X</div> <div class="toeboard">X</div> <div class="toeboard">X</div>
+    <br/>
+    <div class="toeboard">X</div> <div class="toeboard">X</div> <div class="toeboard">X</div>
+    <br/>
+    
+    </body>
