--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Hola</title>
+  <title>home</title>
   <!--linking style.css to index.hml-->
     <link rel="stylesheet" href="style.css">
 </head>
